--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,15 @@ dependencies:
     sdk: flutter
   auto_route: ^2.2.0
   cupertino_icons: ^1.0.2
+  get_it: ^7.1.3
+  injectable: ^1.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   auto_route_generator: ^2.1.0
   build_runner: ^2.0.3
+  injectable_generator: ^1.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
