--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   auto_route: ^2.2.0
   cupertino_icons: ^1.0.2
+  dartz: ^0.9.2
   equatable: ^2.0.2
   flutter_bloc: ^7.0.0
   flutter_secure_storage: ^4.2.0
