--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   auto_route: ^2.2.0
   cupertino_icons: ^1.0.2
   dartz: ^0.9.2
+  dio: ^4.0.0
   equatable: ^2.0.2
   flutter_bloc: ^7.0.0
   flutter_secure_storage: ^4.2.0
