--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
   dio: ^4.0.0
+  envify: ^2.0.0
   equatable: ^2.0.2
   flutter_bloc: ^7.0.0
   flutter_secure_storage: ^4.2.0
@@ -38,6 +39,7 @@ dev_dependencies:
     sdk: flutter
   auto_route_generator: ^2.1.0
   build_runner: ^2.0.3
+  envify_generator: ^2.0.0
   injectable_generator: ^1.4.0
 
 # For information on the generic Dart part of this file, see the
