--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 KEY=VALUE
-KEYU=VALUEE
-BACKEND_URL=http://34.101.214.225
+ENVIRONMENT=DEVELOPMENT
+BACKEND_URL=http://localhost:8000
 IS_STUDENT=true
