--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.frontend_app_public">
+
+   <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="frontend_app_public"
         android:icon="@mipmap/ic_launcher">
