--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   equatable: ^2.0.2
   flutter_bloc: ^7.0.0
   flutter_secure_storage: ^4.2.0
+  freezed_annotation: ^0.14.2
   get_it: ^7.1.3
   injectable: ^1.4.0
 
@@ -40,7 +41,9 @@ dev_dependencies:
   auto_route_generator: ^2.1.0
   build_runner: ^2.0.3
   envify_generator: ^2.0.0
+  freezed: ^0.14.2
   injectable_generator: ^1.4.0
+  json_serializable: ^4.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
