--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,8 +1,8 @@
-name: Build and Test
+name: Build Flutter APK
 on: [push]
 jobs:
-  test:
-    name: Test on ${{ matrix.os }}
+  build:
+    name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -17,5 +17,4 @@ jobs:
           flutter-version: "2.0.6"
           channel: "stable" # dev, stable, beta
       - run: flutter pub get
-      - run: flutter test
       - run: flutter build apk
