--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   freezed_annotation: ^0.14.2
   get_it: ^7.1.3
   injectable: ^1.4.0
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
