--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_bloc: ^7.0.0
   flutter_secure_storage: ^4.2.0
   freezed_annotation: ^0.14.2
+  geolocator: ^7.0.3
   get_it: ^7.1.3
   injectable: ^1.4.0
   pull_to_refresh: ^2.0.0
