--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   dio: ^4.0.0
   envify: ^2.0.0
   equatable: ^2.0.2
+  file_picker: ^3.0.2+2
   flutter_bloc: ^7.0.0
   flutter_secure_storage: ^4.2.0
   freezed_annotation: ^0.14.2
