--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   auto_route: ^2.2.0
+  carousel_slider: 4.0.0-nullsafety.0
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
   dio: ^4.0.0
