--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 KEY=VALUE
 ENVIRONMENT=DEVELOPMENT
-BACKEND_URL="http://34.101.214.225"
+BACKEND_URL=https://laporin.arifikhsanudin.my.id
 IS_STUDENT=true
