--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ app.*.map.json
 /android/app/release
 
 # generated .env file
-lib/env/env.g.dart
+lib/config/env/env.g.dart
 
 # .env files
 .env.development
