--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ KEY=VALUE
 ENVIRONMENT=PRODUCTION
 BACKEND_URL=https://laporin.arifikhsanudin.my.id
 IS_STUDENT=true
+BACKEND_AI_URL=https://backend-ai-service-twldy2igbq-et.a.run.app
