--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -2,12 +2,11 @@ name: Build Flutter APK
 on: [push]
 jobs:
   build:
-    name: Build on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest]
+    name: Build and release
+    runs-on: macos-latest
     steps:
+      - name: Export Release Timestamp
+        run: echo "APP_VERSION=release_$(date +'%Y-%m-%d_%H-%m-%S')" >> $GITHUB_ENV
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
@@ -17,10 +16,18 @@ jobs:
           flutter-version: "2.0.6"
           channel: "stable" # dev, stable, beta
       - run: flutter pub get
-      - run: flutter build apk
+      - run: flutter build apk --split-per-abi
+
+      - name: Release Apps
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ env.APP_VERSION }}
+          name: ${{ env.APP_VERSION }}
+          token: ${{ secrets.TOKEN }}
+          artifacts: "build/app/outputs/apk/release/*.apk"
 
       # Upload generated apk to the artifacts.
-      - uses: actions/upload-artifact@v2
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     name: release-apk
+      #     path: build/app/outputs/apk/release/app-release.apk
