--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   build:
     name: Build and release
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Export Release Timestamp
         run: echo "APP_VERSION=release_$(date +'%Y-%m-%d_%H-%m-%S')" >> $GITHUB_ENV
