--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -25,6 +25,17 @@ jobs:
           directory: .
           file_name: .env.production
 
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_KEY: VALUE
+          envkey_ENVIRONMENT: PRODUCTION
+          envkey_BACKEND_URL: https://laporin.arifikhsanudin.my.id
+          envkey_BACKEND_AI_URL: https://backend-ai-service-twldy2igbq-et.a.run.app
+          envkey_IS_STUDENT: true
+          directory: .
+          file_name: .env.development
+
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: "2.0.6"
