--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -7,7 +7,9 @@ jobs:
     steps:
       - name: Export Release Timestamp
         run: echo "APP_VERSION=release_$(date +'%Y-%m-%d_%H-%m-%S')" >> $GITHUB_ENV
+
       - uses: actions/checkout@v2
+
       - uses: actions/setup-java@v1
         with:
           java-version: "12.x"
@@ -43,6 +45,12 @@ jobs:
       - run: flutter pub get
       - run: flutter pub run build_runner build --delete-conflicting-outputs
       - run: flutter build apk --split-per-abi
+
+      - name: Create keystore file
+      - run: |
+          echo "${{ secrets.RELEASE_KEYSTORE }}" > release.keystore.asc
+          gpg --batch --passphrase "${{ secrets.RELEASE_KEYSTORE_PASSPHRASE }}" -d -o android/release.keystore.jks release.keystore.asc
+          ls android/release.keystore.jks
 
       - name: Release Apps
         uses: ncipollo/release-action@v1
