--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -57,6 +57,7 @@ jobs:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           ALIAS: ${{ secrets.ALIAS }}
           KEY_PATH: android/release.keystore.jks
+          STORE_FILE: android/release.keystore.jks
 
       - name: Release Apps
         uses: ncipollo/release-action@v1
