--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -58,8 +58,8 @@ jobs:
           STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           ALIAS: ${{ secrets.ALIAS }}
-          KEY_PATH: release.keystore.jks
-          STORE_FILE: release.keystore.jks
+          KEY_PATH: "release.keystore.jks"
+          STORE_FILE: "release.keystore.jks"
 
       - name: Release Apps
         uses: ncipollo/release-action@v1
