--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   equatable: ^2.0.2
   file_picker: ^3.0.2+2
   flutter_bloc: ^7.0.0
+  flutter_launcher_icons: ^0.9.0
   flutter_secure_storage: ^4.2.0
   freezed_annotation: ^0.14.2
   geolocator: ^7.0.3
@@ -85,3 +86,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/logo.png"
