--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -54,7 +54,7 @@ jobs:
           KEY_JKS: ${{ secrets.KEY_JKS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
-        run: |
+      - run: |
           echo $KEY_JKS > android/release.keystore.jks
 
       - run: flutter pub get
